--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "celery>=5.6.1",
     "redis>=7.1.0",
     "django-celery-results>=2.6.0",
+    "uv>=0.9.21",
+    "django-cors-headers>=4.9.0",
 ]
 
 # ===============================
