--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,8 @@ EVOLUTION_API_KEY=seu-token-global-da-evolution-api
 # ==========================================
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND=redis://redis:6379/1
+
+# ==========================================
+# CAMINHO CUSTOMIZADO DO ADMIN
+# ==========================================
+DJANGO_ADMIN_PATH=_ops-19x/
