--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,30 @@
 version: "3.8"
 
 services:
-  # =====================================================
-  # MIGRATE — roda uma vez e encerra
-  # =====================================================
   migrate:
-    image: brunobh51/flowlog:v1.1
+    image: brunobh51/flowlog:v1.4
     command: >
-      sh -c "
-      python manage.py makemigrations &&
-      python manage.py migrate
-      "
+      sh -c "python manage.py migrate --noinput &&
+      python manage.py collectstatic --noinput &&
+      python manage.py shell -c \"from django.contrib.auth import get_user_model; import os; User=get_user_model(); e=os.getenv('DJANGO_SUPERUSER_EMAIL'); p=os.getenv('DJANGO_SUPERUSER_PASSWORD'); (e and p and not User.objects.filter(email=e).exists()) and User.objects.create_superuser(email=e, password=p) or print('superuser ok')\""
     environment:
       SECRET_KEY: ${SECRET_KEY}
       DEBUG: ${DEBUG}
       USE_SQLITE: ${USE_SQLITE}
-
-      DB_HOST: postgres_flowlog
+      SITE_URL: ${SITE_URL}
+      DB_HOST: ${DB_HOST}
       DB_NAME: ${DB_NAME}
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_PORT: ${DB_PORT}
-
       CELERY_BROKER_URL: ${CELERY_BROKER_URL}
       CELERY_RESULT_BACKEND: ${CELERY_RESULT_BACKEND}
-
       EVOLUTION_API_URL: ${EVOLUTION_API_URL}
       EVOLUTION_API_KEY: ${EVOLUTION_API_KEY}
-      EVOLUTION_INSTANCE: ${EVOLUTION_INSTANCE}
-
+      DJANGO_SUPERUSER_EMAIL: ${DJANGO_SUPERUSER_EMAIL}
+      DJANGO_SUPERUSER_PASSWORD: ${DJANGO_SUPERUSER_PASSWORD}
+    volumes:
+      - static_volume:/app/staticfiles
     networks:
       - app_network
     deploy:
@@ -36,40 +32,32 @@ services:
       restart_policy:
         condition: none
 
-  # =====================================================
-  # FLOWLOG — Django + Gunicorn (APP PRINCIPAL)
-  # =====================================================
   flowlog:
-    image: brunobh51/flowlog:v1.1
-    command: gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 3
+    image: brunobh51/flowlog:v1.4
+    command: gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 3 --access-logfile - --error-logfile -
     environment:
       SECRET_KEY: ${SECRET_KEY}
       DEBUG: ${DEBUG}
       USE_SQLITE: ${USE_SQLITE}
       ALLOWED_HOSTS: ${ALLOWED_HOSTS}
       CSRF_TRUSTED_ORIGINS: ${CSRF_TRUSTED_ORIGINS}
-
-      DB_HOST: postgres_flowlog
+      SITE_URL: ${SITE_URL}
+      DJANGO_ADMIN_PATH: ${DJANGO_ADMIN_PATH}
+      DB_HOST: ${DB_HOST}
       DB_NAME: ${DB_NAME}
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_PORT: ${DB_PORT}
-
       CELERY_BROKER_URL: ${CELERY_BROKER_URL}
       CELERY_RESULT_BACKEND: ${CELERY_RESULT_BACKEND}
-
       EVOLUTION_API_URL: ${EVOLUTION_API_URL}
       EVOLUTION_API_KEY: ${EVOLUTION_API_KEY}
-      EVOLUTION_INSTANCE: ${EVOLUTION_INSTANCE}
-
     volumes:
       - static_volume:/app/staticfiles
       - media_volume:/app/media
-
     networks:
       - traefik_public
       - app_network
-
     deploy:
       replicas: 1
       placement:
@@ -77,103 +65,75 @@ services:
           - node.role == manager
       labels:
         - traefik.enable=true
-        - traefik.swarm.network=traefik_public
-
+        - traefik.docker.network=traefik_public
         - traefik.http.routers.flowlog.rule=Host(`flowlog.lojabibelo.com.br`)
         - traefik.http.routers.flowlog.entrypoints=websecure
         - traefik.http.routers.flowlog.tls.certresolver=le
-
         - traefik.http.services.flowlog.loadbalancer.server.port=8000
-        - traefik.http.middlewares.flowlog-compress.compress=true
-        - traefik.http.routers.flowlog.middlewares=flowlog-compress
 
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8000/healthcheck/ || exit 1"]
-      interval: 30s
-      timeout: 5s
-      retries: 3
-
-  # =====================================================
-  # WORKER — Celery
-  # =====================================================
   worker:
-    image: brunobh51/flowlog:v1.1
-    command: celery -A config worker -l info -Q default,whatsapp
+    image: brunobh51/flowlog:v1.4
+    command: celery -A config worker -l info -Q default,whatsapp --concurrency=2
     environment:
       SECRET_KEY: ${SECRET_KEY}
       DEBUG: ${DEBUG}
       USE_SQLITE: ${USE_SQLITE}
-
-      DB_HOST: postgres_flowlog
+      SITE_URL: ${SITE_URL}
+      DB_HOST: ${DB_HOST}
       DB_NAME: ${DB_NAME}
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_PORT: ${DB_PORT}
-
       CELERY_BROKER_URL: ${CELERY_BROKER_URL}
       CELERY_RESULT_BACKEND: ${CELERY_RESULT_BACKEND}
-
       EVOLUTION_API_URL: ${EVOLUTION_API_URL}
       EVOLUTION_API_KEY: ${EVOLUTION_API_KEY}
-      EVOLUTION_INSTANCE: ${EVOLUTION_INSTANCE}
-
     networks:
       - app_network
     deploy:
       replicas: 1
+      resources:
+        limits:
+          memory: 512M
 
-  # =====================================================
-  # BEAT — Celery Beat (SEM ERRO DE PERMISSÃO)
-  # =====================================================
   beat:
-    image: brunobh51/flowlog:v1.1
-    command: >
-      celery -A config beat
-      -l info
-      --schedule=/tmp/celerybeat-schedule
+    image: brunobh51/flowlog:v1.4
+    command: celery -A config beat -l info --schedule=/tmp/celerybeat-schedule
     environment:
       SECRET_KEY: ${SECRET_KEY}
       DEBUG: ${DEBUG}
       USE_SQLITE: ${USE_SQLITE}
-
-      DB_HOST: postgres_flowlog
+      SITE_URL: ${SITE_URL}
+      DB_HOST: ${DB_HOST}
       DB_NAME: ${DB_NAME}
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_PORT: ${DB_PORT}
-
       CELERY_BROKER_URL: ${CELERY_BROKER_URL}
       CELERY_RESULT_BACKEND: ${CELERY_RESULT_BACKEND}
-
     networks:
       - app_network
     deploy:
       replicas: 1
 
-  # =====================================================
-  # REDIS
-  # =====================================================
   redis:
     image: redis:7-alpine
-    command: redis-server --appendonly yes
+    command: redis-server --appendonly yes --maxmemory 128mb --maxmemory-policy allkeys-lru
     volumes:
       - redis_data:/data
     networks:
       - app_network
     deploy:
       replicas: 1
+      resources:
+        limits:
+          memory: 256M
 
-# =====================================================
-# VOLUMES
-# =====================================================
 volumes:
   static_volume:
   media_volume:
   redis_data:
 
-# =====================================================
-# NETWORKS
-# =====================================================
 networks:
   traefik_public:
     external: true
