--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ requires-python = ">=3.12,<3.14"
 dependencies = [
     "django>=5.2,<6.0",
     "djangorestframework>=3.15,<4.0",
+    "django-filter>=24.0",
     "evolutionapi>=0.1.2",
     "python-decouple>=3.8",
     "requests>=2.32",
