feat: add sentry sdk and configuration for error tracking

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,11 @@ EVOLUTION_API_KEY=seu-token-global-da-evolution-api
 # Cada tenant cria sua própria instância na interface
 
 # ==========================================
+# OBSERVABILITY
+# ==========================================
+SENTRY_DSN=
+
+# ==========================================
 # CELERY + REDIS
 # ==========================================
 CELERY_BROKER_URL=redis://redis:6379/0
