--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -29,6 +29,7 @@ services:
     environment:
       - SECRET_KEY=${SECRET_KEY}
       - DEBUG=${DEBUG}
+      - SENTRY_DSN=${SENTRY_DSN}
       - ALLOWED_HOSTS=${ALLOWED_HOSTS}
       - CSRF_TRUSTED_ORIGINS=${CSRF_TRUSTED_ORIGINS}
       - SITE_URL=${SITE_URL}
