--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,9 @@ celery==5.6.1
     #   flowlog (pyproject.toml:infra)
     #   django-celery-results
 certifi==2025.11.12
-    # via requests
+    # via
+    #   requests
+    #   sentry-sdk
 charset-normalizer==3.4.4
     # via requests
 click==8.3.1
@@ -43,6 +45,7 @@ django==5.2.9
     #   django-filter
     #   djangorestframework
     #   drf-spectacular
+    #   sentry-sdk
 django-celery-results==2.6.0
     # via flowlog (pyproject.toml)
 django-cors-headers==4.9.0
@@ -108,6 +111,8 @@ rpds-py==0.30.0
     # via
     #   jsonschema
     #   referencing
+sentry-sdk==2.50.0
+    # via flowlog (pyproject.toml)
 simple-websocket==1.1.0
     # via python-engineio
 six==1.17.0
@@ -121,7 +126,9 @@ tzlocal==5.3.1
 uritemplate==4.2.0
     # via drf-spectacular
 urllib3==2.6.2
-    # via requests
+    # via
+    #   requests
+    #   sentry-sdk
 uv==0.9.21
     # via flowlog (pyproject.toml)
 vine==5.1.0
