--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -2,46 +2,67 @@ version: "3.8"
 
 services:
   # --------------------------------------------------------------------------
-  # 1. MIGRATE (One-off job)
+  # 1. MIGRATE (One-off job with Superuser automation)
   # --------------------------------------------------------------------------
   migrate:
-    image: brunobh51/flowlog:latest
-    command: python manage.py migrate --noinput
+    image: brunobh51/flowlog:v1.10.2
+    command: >
+      sh -c "python manage.py migrate --noinput && python manage.py collectstatic --noinput && python manage.py shell -c \"from django.contrib.auth import get_user_model; import os; User=get_user_model(); e=os.getenv('DJANGO_SUPERUSER_EMAIL'); p=os.getenv('DJANGO_SUPERUSER_PASSWORD'); (e and p and not User.objects.filter(email=e).exists()) and User.objects.create_superuser(email=e, password=p) or print('superuser ok')\""
     environment:
-      - SECRET_KEY=${SECRET_KEY}
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
+      TZ: America/Sao_Paulo
+      SECRET_KEY: ${SECRET_KEY}
+      DEBUG: ${DEBUG}
+      USE_SQLITE: ${USE_SQLITE}
+      SITE_URL: ${SITE_URL}
+      DB_HOST: ${DB_HOST}
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_PORT: ${DB_PORT}
+      CELERY_BROKER_URL: ${CELERY_BROKER_URL}
+      CELERY_RESULT_BACKEND: ${CELERY_RESULT_BACKEND}
+      EVOLUTION_API_URL: ${EVOLUTION_API_URL}
+      EVOLUTION_API_KEY: ${EVOLUTION_API_KEY}
+      DJANGO_SUPERUSER_EMAIL: ${DJANGO_SUPERUSER_EMAIL}
+      DJANGO_SUPERUSER_PASSWORD: ${DJANGO_SUPERUSER_PASSWORD}
+    volumes:
+      - static_volume:/app/staticfiles
     networks:
       - app_network
     deploy:
-      replicas: 0 # Just for manual execution or automated via deploy script
+      replicas: 1
       restart_policy:
         condition: none
+      resources:
+        limits:
+          cpus: "0.5"
+          memory: 512M
 
   # --------------------------------------------------------------------------
   # 2. WEB APPLICATION (Gunicorn)
   # --------------------------------------------------------------------------
   flowlog:
-    image: brunobh51/flowlog:latest
+    image: brunobh51/flowlog:v1.10.2
+    command: >
+      gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 2 --timeout 60 --access-logfile - --error-logfile -
     environment:
-      - SECRET_KEY=${SECRET_KEY}
-      - DEBUG=${DEBUG}
-      - SENTRY_DSN=${SENTRY_DSN}
-      - ALLOWED_HOSTS=${ALLOWED_HOSTS}
-      - CSRF_TRUSTED_ORIGINS=${CSRF_TRUSTED_ORIGINS}
-      - SITE_URL=${SITE_URL}
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
-      - CELERY_BROKER_URL=${CELERY_BROKER_URL}
-      - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND}
-      - EVOLUTION_API_URL=${EVOLUTION_API_URL}
-      - EVOLUTION_API_KEY=${EVOLUTION_API_KEY}
+      TZ: America/Sao_Paulo
+      SECRET_KEY: ${SECRET_KEY}
+      DEBUG: ${DEBUG}
+      USE_SQLITE: ${USE_SQLITE}
+      ALLOWED_HOSTS: ${ALLOWED_HOSTS}
+      CSRF_TRUSTED_ORIGINS: ${CSRF_TRUSTED_ORIGINS}
+      SITE_URL: ${SITE_URL}
+      DJANGO_ADMIN_PATH: ${DJANGO_ADMIN_PATH}
+      DB_HOST: ${DB_HOST}
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_PORT: ${DB_PORT}
+      CELERY_BROKER_URL: ${CELERY_BROKER_URL}
+      CELERY_RESULT_BACKEND: ${CELERY_RESULT_BACKEND}
+      EVOLUTION_API_URL: ${EVOLUTION_API_URL}
+      EVOLUTION_API_KEY: ${EVOLUTION_API_KEY}
     volumes:
       - static_volume:/app/staticfiles
       - media_volume:/app/media
@@ -50,69 +71,77 @@ services:
       - app_network
     deploy:
       replicas: 1
-      restart_policy:
-        condition: on-failure
+      placement:
+        constraints:
+          - node.role == manager
       labels:
-        - "traefik.enable=true"
-        - "traefik.docker.network=traefik_public"
-        - "traefik.http.routers.flowlog.rule=Host(`flowlog.lojabibelo.com.br`)" # TODO: Make this dynamic?
-        - "traefik.http.routers.flowlog.entrypoints=websecure"
-        - "traefik.http.routers.flowlog.tls.certresolver=le"
-        - "traefik.http.services.flowlog.loadbalancer.server.port=8000"
+        - traefik.enable=true
+        - traefik.docker.network=traefik_public
+        - traefik.http.routers.flowlog.rule=Host(`flowlog.lojabibelo.com.br`)
+        - traefik.http.routers.flowlog.entrypoints=websecure
+        - traefik.http.routers.flowlog.tls.certresolver=le
+        - traefik.http.services.flowlog.loadbalancer.server.port=8000
       resources:
         limits:
           cpus: "1.0"
           memory: 768M
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/healthcheck/"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
 
   # --------------------------------------------------------------------------
   # 3. CELERY WORKER
   # --------------------------------------------------------------------------
   worker:
-    image: brunobh51/flowlog:latest
+    image: brunobh51/flowlog:v1.10.2
     command: celery -A config worker -l info -Q default,whatsapp --concurrency=2
     environment:
-      - SECRET_KEY=${SECRET_KEY}
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
-      - CELERY_BROKER_URL=${CELERY_BROKER_URL}
-      - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND}
-      - EVOLUTION_API_URL=${EVOLUTION_API_URL}
-      - EVOLUTION_API_KEY=${EVOLUTION_API_KEY}
+      TZ: America/Sao_Paulo
+      SECRET_KEY: ${SECRET_KEY}
+      DEBUG: ${DEBUG}
+      USE_SQLITE: ${USE_SQLITE}
+      SITE_URL: ${SITE_URL}
+      DB_HOST: ${DB_HOST}
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_PORT: ${DB_PORT}
+      CELERY_BROKER_URL: ${CELERY_BROKER_URL}
+      CELERY_RESULT_BACKEND: ${CELERY_RESULT_BACKEND}
+      EVOLUTION_API_URL: ${EVOLUTION_API_URL}
+      EVOLUTION_API_KEY: ${EVOLUTION_API_KEY}
     networks:
       - app_network
     deploy:
       replicas: 1
-      restart_policy:
-        condition: on-failure
       resources:
         limits:
-          cpus: "1.0"
+          cpus: "1"
           memory: 1024M
 
   # --------------------------------------------------------------------------
   # 4. CELERY BEAT
   # --------------------------------------------------------------------------
   beat:
-    image: brunobh51/flowlog:latest
-    command: celery -A config beat -l info --schedule=/tmp/celerybeat-schedule
+    image: brunobh51/flowlog:v1.10.2
+    user: root
+    command: celery -A config beat -l info --schedule=/data/celerybeat-schedule
     environment:
-      - SECRET_KEY=${SECRET_KEY}
-      - CELERY_BROKER_URL=${CELERY_BROKER_URL}
-      - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND}
+      TZ: America/Sao_Paulo
+      SECRET_KEY: ${SECRET_KEY}
+      DEBUG: ${DEBUG}
+      USE_SQLITE: ${USE_SQLITE}
+      SITE_URL: ${SITE_URL}
+      DB_HOST: ${DB_HOST}
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_PORT: ${DB_PORT}
+      CELERY_BROKER_URL: ${CELERY_BROKER_URL}
+      CELERY_RESULT_BACKEND: ${CELERY_RESULT_BACKEND}
+    volumes:
+      - celerybeat_data:/data
     networks:
       - app_network
     deploy:
       replicas: 1
-      restart_policy:
-        condition: on-failure
       resources:
         limits:
           cpus: "0.5"
@@ -124,14 +153,14 @@ services:
   redis:
     image: redis:7-alpine
     command: redis-server --appendonly yes --appendfsync everysec --maxmemory 256mb --maxmemory-policy allkeys-lru
+    environment:
+      TZ: America/Sao_Paulo
     volumes:
       - redis_data:/data
     networks:
       - app_network
     deploy:
       replicas: 1
-      restart_policy:
-        condition: on-failure
       resources:
         limits:
           cpus: "0.5"
@@ -141,9 +170,10 @@ volumes:
   static_volume:
   media_volume:
   redis_data:
+  celerybeat_data:
 
 networks:
   traefik_public:
     external: true
   app_network:
-    external: true # In Swarm, it's good practice to create this manually or let the stack manage it
+    external: true
