--- a/requirements.txt
+++ b/requirements.txt
@@ -37,9 +37,12 @@ click-plugins==1.1.1.2
     # via celery
 click-repl==0.3.0
     # via celery
+dj-database-url==3.1.0
+    # via flowlog (pyproject.toml)
 django==5.2.9
     # via
     #   flowlog (pyproject.toml)
+    #   dj-database-url
     #   django-celery-results
     #   django-cors-headers
     #   django-filter
